fix the overflow for mobile

--- a/src/components/SlidingImages/style.module.scss
+++ b/src/components/SlidingImages/style.module.scss
@@ -6,6 +6,7 @@
     margin-top: 200px;
     background-color: white;
     z-index: 1;
+    overflow-x: hidden;
 
     @media (max-width: 1024px) {
         margin-top: 150px;
